--- a/jorge/index.html
+++ b/jorge/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" type="text/css" href="./css/master.css">
   </head>
   <body>
-
+    <header></header>
+    <nav></nav>
+    <footer></footer>
   </body>
 </html>
