--- a/jorge/index.html
+++ b/jorge/index.html
@@ -2,12 +2,24 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <base href="." target="_blank"/>
     <title> Gigante SDQ</title>
     <link rel="stylesheet" type="text/css" href="./css/master.css">
   </head>
   <body>
     <header></header>
-    <nav></nav>
+
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="./html/agenda.html">Agenda</a></li>
+        <li><a href="./html/videoclipes.html">Videoclipes</a></li>
+        <li><a href="./html/contato.html">Contato</a></li>
+        <li><a href="./html/projetos_sociais.html">Projetos Sociais</a></li>
+      </ul>
+    </nav>
+
     <footer></footer>
+
   </body>
 </html>
