--- a/jorge/index.html
+++ b/jorge/index.html
@@ -10,11 +10,13 @@
     <header></header>
 
     <nav>
-        <a href="index.html">Home</a>
-        <a href="./html/agenda.html">Agenda</a>
-        <a href="./html/videoclipes.html">Videoclipes</a>
-        <a href="./html/contato.html">Contato</a>
-        <a href="./html/projetos_sociais.html">Projetos Sociais</a>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="./html/agenda.html">Agenda</a></li>
+        <li><a href="./html/videoclipes.html">Videoclipes</a></li>
+        <li><a href="./html/contato.html">Contato</a></li>
+        <li><a href="./html/projetos_sociais.html">Projetos Sociais</a></li>
+      </ul>
     </nav>
 
     <footer></footer>
