Adicionando um pouco de conteúdo

--- a/jorge/index.html
+++ b/jorge/index.html
@@ -2,19 +2,22 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Lobster|Roboto" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./css/master.css">
     <base href="." target="_blank"/>
     <title> Gigante SDQ</title>
-    <link rel="stylesheet" type="text/css" href="./css/master.css">
   </head>
   <body>
     <header></header>
 
     <nav>
-        <a href="index.html">Home</a>
-        <a href="./html/agenda.html">Agenda</a>
-        <a href="./html/videoclipes.html">Videoclipes</a>
-        <a href="./html/contato.html">Contato</a>
-        <a href="./html/projetos_sociais.html">Projetos Sociais</a>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="./html/agenda.html">Agenda</a></li>
+        <li><a href="./html/videoclipes.html">Videoclipes</a></li>
+        <li><a href="./html/contato.html">Contato</a></li>
+        <li><a href="./html/projetos_sociais.html">Projetos Sociais</a></li>
+      </ul>
     </nav>
 
     <footer></footer>
