--- a/jorge/index.html
+++ b/jorge/index.html
@@ -12,11 +12,11 @@
 
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="./html/agenda.html">Agenda</a></li>
+        <li><a class="active" href="index.html">Home</a></li>
         <li><a href="./html/videoclipes.html">Videoclipes</a></li>
-        <li><a href="./html/contato.html">Contato</a></li>
         <li><a href="./html/projetos_sociais.html">Projetos Sociais</a></li>
+        <li><a href="./html/agenda.html">Agenda</a></li>
+        <li><a href="./html/contato.html">Contato</a></li>
       </ul>
     </nav>
 
