--- a/jorge/index.html
+++ b/jorge/index.html
@@ -9,15 +9,17 @@
     <title> Gigante SDQ</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <h1>Gigante SDQ</h1>
+    </header>
 
     <nav>
       <ul>
         <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="./html/videoclipes.html">Videoclipes</a></li>
-        <li><a href="./html/projetos_sociais.html">Projetos Sociais</a></li>
-        <li><a href="./html/agenda.html">Agenda</a></li>
-        <li><a href="./html/contato.html">Contato</a></li>
+        <li><a href="videoclipes.html">Videoclipes</a></li>
+        <li><a href="projetos_sociais.html">Projetos Sociais</a></li>
+        <li><a href="agenda.html">Agenda</a></li>
+        <li><a href="contato.html">Contato</a></li>
       </ul>
     </nav>
 
