Adicionando novas páginas, novas marcações e mais css

--- a/jorge/projetos_sociais.html
+++ b/jorge/projetos_sociais.html
@@ -15,9 +15,9 @@
 
     <nav>
       <ul>
-        <li><a class="active" href="index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="videoclipes.html">Videoclipes</a></li>
-        <li><a href="projetos_sociais.html">Projetos Sociais</a></li>
+        <li><a class="active" href="projetos_sociais.html">Projetos Sociais</a></li>
         <li><a href="agenda.html">Agenda</a></li>
         <li><a href="contato.html">Contato</a></li>
       </ul>
