--- a/jorge/contato.html
+++ b/jorge/contato.html
@@ -15,11 +15,11 @@
 
     <nav>
       <ul>
-        <li><a class="active" href="index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="videoclipes.html">Videoclipes</a></li>
         <li><a href="projetos_sociais.html">Projetos Sociais</a></li>
         <li><a href="agenda.html">Agenda</a></li>
-        <li><a href="contato.html">Contato</a></li>
+        <li><a class="active" href="contato.html">Contato</a></li>
       </ul>
     </nav>
 
