--- a/jorge/videoclipes.html
+++ b/jorge/videoclipes.html
@@ -15,13 +15,18 @@
 
     <nav>
       <ul>
-        <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="videoclipes.html">Videoclipes</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a class="active" href="videoclipes.html">Videoclipes</a></li>
         <li><a href="projetos_sociais.html">Projetos Sociais</a></li>
         <li><a href="agenda.html">Agenda</a></li>
         <li><a href="contato.html">Contato</a></li>
       </ul>
     </nav>
+
+    <section>
+      <h2>Pecados</h2>
+      <iframe src="https://www.youtube.com/embed/Z9bJexFqJZ8?loop=1&controls=1" frameborder="0">Videoclipe: Pecados - Gigante SDQ</iframe>
+    </section>
 
     <footer></footer>
 
