Adicionando conteudo REAL

--- a/jorge/videoclipes.html
+++ b/jorge/videoclipes.html
@@ -30,64 +30,40 @@
       </section>
 
       <section>
-        <h2>Pecados</h2>
-        <iframe src="https://www.youtube.com/embed/Z9bJexFqJZ8?loop=1&controls=1" frameborder="0">Videoclipe: Pecados - Gigante SDQ</iframe>
+        <h2>Quadrilha da Fumaça</h2>
+        <iframe src="https://www.youtube.com/embed/2j8uuuQsGiE?loop=1&controls=1" frameborder="0" allowfullscreen></iframe>
+      </section>
+
+      <section>
+        <h2>Favela chorou, Burguesia sorriu</h2>
+        <iframe src="https://www.youtube.com/embed/fK7an04bQIc?loop=1&controls=1" frameborder="0"></iframe>
+      </section>
+
+      <section>
+        <h2>Meu Habitat</h2>
+        <iframe src="https://www.youtube.com/embed/WRYkdg-oGoY?loop=1&controls=1" frameborder="0"></iframe>
+      </section>
+    
+      <section>
+        <h2>Ordem e Progresso</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/GoKHXsOxv4I?loop=1&controls=1" frameborder="0"></iframe>
+      </section>
+
+      <section>
+        <h2>Sua Origem</h2>
+        <iframe src="https://www.youtube.com/embed/2ZScvnzuMzQ?loop=1&controls=1" frameborder="0"></iframe>
+      </section>
+
+      <section>
+        <h2>Na Calada da Espraiada</h2>
+        <iframe src="https://www.youtube.com/embed/14IKCGJByEE?loop=1&controls=1" frameborder="0"></iframe>
       </section>
 
       <section>
         <h2>Pecados</h2>
-        <iframe src="https://www.youtube.com/embed/Z9bJexFqJZ8?loop=1&controls=1" frameborder="0">Videoclipe: Pecados - Gigante SDQ</iframe>
+        <iframe src="https://www.youtube.com/embed/Z9bJexFqJZ8?loop=1&controls=1" frameborder="0"></iframe>
       </section>
 
-      <section>
-        <h2>Pecados</h2>
-        <iframe src="https://www.youtube.com/embed/Z9bJexFqJZ8?loop=1&controls=1" frameborder="0">Videoclipe: Pecados - Gigante SDQ</iframe>
-      </section>
-
-      <section>
-        <h2>Pecados</h2>
-        <iframe src="https://www.youtube.com/embed/Z9bJexFqJZ8?loop=1&controls=1" frameborder="0">Videoclipe: Pecados - Gigante SDQ</iframe>
-      </section>
-
-      <section>
-        <h2>Pecados</h2>
-        <iframe src="https://www.youtube.com/embed/Z9bJexFqJZ8?loop=1&controls=1" frameborder="0">Videoclipe: Pecados - Gigante SDQ</iframe>
-      </section>
-
-      <section>
-        <h2>Pecados</h2>
-        <iframe src="https://www.youtube.com/embed/Z9bJexFqJZ8?loop=1&controls=1" frameborder="0">Videoclipe: Pecados - Gigante SDQ</iframe>
-      </section>
-
-      <section>
-        <h2>Pecados</h2>
-        <iframe src="https://www.youtube.com/embed/Z9bJexFqJZ8?loop=1&controls=1" frameborder="0">Videoclipe: Pecados - Gigante SDQ</iframe>
-      </section>
-
-      <section>
-        <h2>Pecados</h2>
-        <iframe src="https://www.youtube.com/embed/Z9bJexFqJZ8?loop=1&controls=1" frameborder="0">Videoclipe: Pecados - Gigante SDQ</iframe>
-      </section>
-
-      <section>
-        <h2>Pecados</h2>
-        <iframe src="https://www.youtube.com/embed/Z9bJexFqJZ8?loop=1&controls=1" frameborder="0">Videoclipe: Pecados - Gigante SDQ</iframe>
-      </section>
-
-      <section>
-        <h2>Pecados</h2>
-        <iframe src="https://www.youtube.com/embed/Z9bJexFqJZ8?loop=1&controls=1" frameborder="0">Videoclipe: Pecados - Gigante SDQ</iframe>
-      </section>
-
-      <section>
-        <h2>Pecados</h2>
-        <iframe src="https://www.youtube.com/embed/Z9bJexFqJZ8?loop=1&controls=1" frameborder="0">Videoclipe: Pecados - Gigante SDQ</iframe>
-      </section>
-
-      <section>
-        <h2>Pecados</h2>
-        <iframe src="https://www.youtube.com/embed/Z9bJexFqJZ8?loop=1&controls=1" frameborder="0">Videoclipe: Pecados - Gigante SDQ</iframe>
-      </section>
     </div>
     <footer></footer>
 
