--- a/jorge/videoclipes.html
+++ b/jorge/videoclipes.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Lobster|Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster|Roboto|Montserrat" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/master.css">
     <base href="."/>
     <title> Gigante SDQ</title>
@@ -24,10 +24,6 @@
     </nav>
 
     <div class="mainContent">
-      <section>
-        <h2>Pecados</h2>
-        <iframe src="https://www.youtube.com/embed/Z9bJexFqJZ8?loop=1&controls=1" frameborder="0">Videoclipe: Pecados - Gigante SDQ</iframe>
-      </section>
 
       <section>
         <h2>Quadrilha da Fumaça</h2>
